fix: add icon mobile search & fix bugs

--- a/style.css
+++ b/style.css
@@ -119,11 +119,11 @@ nav a:hover {
     font-weight: bold;
     font-size: 16px;
 }
-#formulaire form i {
+#formulaire form > i {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 50px;
+    min-width: 50px;
     background-color:#F2F2F2;
     font-size: 120%;
     border-top-left-radius: 15px;
@@ -143,12 +143,23 @@ nav a:hover {
     border-bottom-right-radius: 15px;
     border: 0;
 }
-#formulaire div {
+#formulaire form button::before {
+    content: "Rechercher";
+}
+#formulaire form button i::before {
+    content: none;
+}
+#formulaire > div:last-child {
     display: flex;
-    align-items: baseline;
+    align-items: center;
 }
 #filtres {
+    display: flex;
     margin-bottom: 30px;
+    align-items: baseline;
+}
+#filtres div {
+    display: flex;
 }
 #filtres h3 {
     margin-right: 25px;
@@ -190,7 +201,7 @@ nav a:hover {
     border: 1px solid #d9d9d9;
     border-radius: 50%;
     height: 20px;
-    width: 20px;
+    min-width: 20px;
     font-family: 'Rokkitt', 'serif';
 }
 @media screen and (max-width: 768px)
@@ -200,18 +211,38 @@ nav a:hover {
     }
     #formulaire form {
         margin: 30px 0;
+        justify-content: space-between;
     }
     #formulaire h2 {
         margin: 0;
+    }
+    #formulaire form input {
+        margin-right: -15px;
+        width: 100%;
+        padding-left: 10px;
+    }
+    #formulaire form button {
+        width: auto;
+        min-width: 50px;
+        border-radius: 15px;
+    }
+    #formulaire form button::before {
+        content: none;
+    }
+    #formulaire form button i::before {
+        content: "\f002";
     }
     #filtres {
         flex-wrap: wrap;
     }
     #filtres > h3 {
-        margin-bottom: 15px;
+        margin: 0 0 15px;
     }
     #filtres > div {
         gap: 13px;
+    }
+    #formulaire div:last-child {
+        align-items: baseline;
     }
 }
 
@@ -299,6 +330,10 @@ main h3 {
         order: 1;
         margin-left: 0;
         padding: 40px 20px;
+    }
+    #populaire article {
+        min-width: auto;
+        height: 155px;
     }
 }
 /* Section Hébergements */
